--- a/KMGlacierAreaEstimate.ipynb
+++ b/KMGlacierAreaEstimate.ipynb
@@ -259,7 +259,7 @@
     "Now that the images for the 1986 dataset have been downloaded the user will build a false colour composite image of the Landsat scene\n",
     "\n",
     "As part of this the user is going to use `Rasterio` to open, read and stack the images to create a new 3D array (using `NumPY`). \n",
-    "This stack combines the necessary band combination to create a False Colour Composite Image of the Landsat scene.\n",
+    "This stack combines the necessary band combination to create a false colour composite image of the Landsat scene.\n",
     "The user will then use matplotlib to present the created False Colour Composite image to ensure that the correct bands have been used and that the stack has been successfull."
    ]
   },
@@ -293,7 +293,7 @@
    "id": "fe3f7a9b-6f17-4a8b-99ba-d50f38a1a5f4",
    "metadata": {},
    "source": [
-    "Now that the False Colour Composite Image has been successfully built. The user will save the image to the `1986Data` folder so that it can be trimmed and then used for the glacier mask later in the session.\n",
+    "Now that the false colour composite image has been successfully built. The user will save the image to the `1986Data` folder so that it can be trimmed and then used for the glacier mask later in the session.\n",
     "\n",
     "The user then updates image profile for the false colour composite image using the NIR band as the source, this ensures that the created TIF keeps the same metadata structure as it will be used in the following steps to create a trim and glacier mask.\n",
     "\n",
@@ -339,7 +339,7 @@
    "id": "a5d26e00-e07c-46c0-9178-7158ff022526",
    "metadata": {},
    "source": [
-    "Now that the Full false Colour Composite Image for the 1986 Landsat scene has been successfully created. The user needs to trim the image so that the only area included in the Glacier Mask is the Kenai Mountains.\n",
+    "Now that the full false Colour Composite Image for the 1986 Landsat scene has been successfully created. The user needs to trim the image so that the only area included in the Glacier Mask is the Kenai Mountains.\n",
     "\n",
     "This is useful as it prevents Glacier Ice and Snow from adjacent mountains influencing the total Glacier area for the 1986 period.\n",
     "\n",
@@ -446,11 +446,11 @@
    "id": "26e7dfc4-16d9-4d92-b009-7ca47b4d32ff",
    "metadata": {},
    "source": [
-    "Now that the directory is tidy and we have the Trimmed False Colour Composite image of the Kenai Mountains in 1986. The user will create a glacier mask that will highlight all objects on the image with a Reflectance value of 0.3 in all 3 bands (the estimated reflectance value of glacier ice and snow).\n",
+    "Now that the directory is tidy and we have the trimmed false colour composite image of the Kenai Mountains in 1986. The user will create a glacier mask that will highlight all objects on the image with a reflectance value of 0.3 in all 3 bands (the estimated reflectance value of glacier ice and snow).\n",
     "\n",
     "To do this the user will carry out a pixel based classification of the image. We do this by normalising the Landsat Bands which are datasets with Digital Values of 0-255 (as they are an 8-bit image) to 0-1. We then identify all pixels in the image that meet the reflectance threshold value to isolate glacier snow/ice.\n",
     "\n",
-    "After Glacier ice and snow has been identified the user will save the glacier mask to a new file, updating the profile metadata from the False Colour Composite Trim to reflect that the new image only has 1 band."
+    "After Glacier ice and snow has been identified the user will save the glacier mask to a new file, updating the profile metadata from the false colour composite trim to reflect that the new image only has 1 band."
    ]
   },
   {
@@ -544,7 +544,7 @@
    "id": "84753d2f-5635-42e7-8deb-685455d6e2c4",
    "metadata": {},
    "source": [
-    "Now that the user haa successfully got the estimated glacier area for 1986, repeat the same process for the 1995 and 2009 dataset. "
+    "Now that the user has successfully got the estimated glacier area for 1986, the same process is repeated for the 1995 and 2009 dataset. "
    ]
   },
   {
@@ -579,7 +579,7 @@
    "id": "972328c6-73a1-40ec-a75f-d4abe9065ea6",
    "metadata": {},
    "source": [
-    "Next the user will use the `entity_id` from the scene search. As we are using the same `product_id` to get the Landat Collection 2 Level 1 zip file. The `dataset_options` function does not need to be repreated. \n",
+    "Next the user will use the `entity_id` from the scene search. As we are using the same `product_id` to get the Landat Collection 2 Level 1 zip file. The `dataset_options` function does not need to be repeated. \n",
     "\n",
     "Similiarly to the 1986 dataset the user is going to create a 1995 folder to download the Landsat band tar file to, and then create a false colour composite image of the 1995 landsat scene."
    ]
@@ -642,7 +642,7 @@
     "Now that the images for the 1995 Landsat scene have been downloaded and extrcated we will build a false colour composite image of the Landsat scene.\n",
     "\n",
     "Use Rasterio to open, read and stack the images to create the 3D array just like the 1986 Landsat scene. \n",
-    "Use matplotlib to present the created False Colour Composite image to ensure that the correct bands have been used and that the stack has been successful."
+    "Use matplotlib to present the created false colour composite image to ensure that the correct bands have been used and that the stack has been successful."
    ]
   },
   {
@@ -675,7 +675,7 @@
    "id": "68be3833-533b-4add-b4be-e865c17092c7",
    "metadata": {},
    "source": [
-    "After the False Colour Composite image has been saved the user needs to save the image to the `1995Data` folder so that it can trimmed and then used for the glacier mask."
+    "After the false colour composite image has been saved the user needs to save the image to the `1995Data` folder so that it can trimmed and then used for the glacier mask."
    ]
   },
   {
@@ -683,7 +683,7 @@
    "id": "0e21c48a-7be0-43b0-ac3b-1570550c6854",
    "metadata": {},
    "source": [
-    "Similiarly to what was done for the 1986 Landsat scene, the user updates the image profile for the 1995 False Colour Composite image using the NIR band (4) as the source, this ensures that the new TIF keeps the same metadata structure as it will be used in the following steps to create a trim and Glacier mask."
+    "Similiarly to what was done for the 1986 Landsat scene, the user updates the image profile for the 1995 false colour composite image using the NIR band (4) as the source, this ensures that the new TIF keeps the same metadata structure as it will be used in the following steps to create a trim and Glacier mask."
    ]
   },
   {
@@ -715,8 +715,8 @@
    "id": "db7d6361-9a55-4c37-8ef8-71496818201a",
    "metadata": {},
    "source": [
-    "The user needs to trim the 1995 false colour composite image so that the only area included in the Glacier Mask is the Kenai Mountains.\n",
-    "The user needs to adjust the bounds (extent) of the 1995 Full False Colour Composite Image to only include the Kenai Mountains.\n",
+    "The user needs to trim the 1995 false colour composite image so that the only area included in the glacier mask is the Kenai Mountains.\n",
+    "The user needs to adjust the bounds (extent) of the 1995 false colour composite image to only include the Kenai Mountains.\n",
     "The bounds for the 1995 image will be different as we are using a different image\n",
     "\n",
     "To include more area (zoom out) on the image:\n",
@@ -792,7 +792,7 @@
    "id": "2629a5e1-e112-45dc-9da3-95245e469d74",
    "metadata": {},
    "source": [
-    "As seen with the 1986 Dataset, the 1995Data is full with image files that are no longer need. To keep the folder tidy and organised we will remove all of the unneccessary files.\n",
+    "As seen with the 1986 Dataset, the `1995Data` folder is full with image files that are no longer need. To keep the folder tidy and organised we will remove all of the unneccessary files.\n",
     "\n",
     "If these are needed at a later date they can be redownloaded using the `download_request` function above"
    ]
@@ -819,9 +819,9 @@
    "id": "302440f6-80a6-4a64-a4b1-bc9b0f15e47e",
    "metadata": {},
    "source": [
-    "Now that folder is more organised, the user will calculate the total glacier area for the 1995 Landsat image. To do this the user will carry out a pixel based classification of the image.  This is done by normalising the Landsat Bands which are datasets with Digital Values of 0-255 (as they are an 8-bit image) to 0-1 (0 = not Glacier ice and snow, 1 = Glacier ice and snow). The user then will identify all pixels in the image that meet the reflectance threshold value to isolate glacier snow/ice (0.3 in all bands).\n",
+    "Now that folder is more organised, the user will calculate the total glacier area for the 1995 Landsat image. To do this the user will carry out a pixel based classification of the image.  This is done by normalising the Landsat Bands which are datasets with Digital Number (DN) Values of 0-255 (as they are an 8-bit image) to 0-1 (0 = not Glacier ice and snow, 1 = Glacier ice and snow). The user then will identify all pixels in the image that meet the reflectance threshold value to isolate glacier snow/ice (0.3 in all bands).\n",
     "\n",
-    "After Glacier ice and snow has been identified, save the glacier mask to a new file, updating the profile metadata from the False Colour Composite Trim to reflect that the new image only has 1 band."
+    "After glacier ice and snow has been identified, save the glacier mask to a new file, updating the profile metadata from the False Colour Composite Trim to reflect that the new image only has 1 band."
    ]
   },
   {
@@ -908,7 +908,7 @@
    "id": "d7394593-4f7d-4f47-a109-9f7904d43445",
    "metadata": {},
    "source": [
-    "As the 2009 Landsat scene also uses the Landsat TM for the image, the steps for getting the Glacier area estimation does not change.\n",
+    "As the 2009 Landsat scene also uses the Landsat TM for the image, the steps for getting the glacier area estimation does not change.\n",
     "\n",
     "Use the Landsat TM instead of the Landsat ETM+ based on errors with the satellite that causes data voids (stripes) on the images due to an error with the Scan Line Corrector (SLC). Using these images may lead to inaccuracies when calculating the Glacier area, so for that reason Landsat TM data has been used for this year.\n",
     "Additional information : -(https://www.usgs.gov/faqs/what-landsat-7-etm-slc-data)"
@@ -1147,7 +1147,7 @@
    "id": "6443b37c-4152-4a1b-84a2-7cb66acd5e09",
    "metadata": {},
    "source": [
-    "After the image has been saved, delete the unneccessary files and tidy up the 2009Data folder. If the files are needed at a later date they can be redownloaded following the steps above."
+    "After the image has been saved, delete the unneccessary files and tidy up the `2009Data` folder. If the files are needed at a later date they can be redownloaded following the steps above."
    ]
   },
   {
@@ -1172,9 +1172,9 @@
    "id": "7c74b0cd-4b61-4a73-8a6b-d11a702523fd",
    "metadata": {},
    "source": [
-    "Now that folder is more organised, we will calculate the total glacier area for the 1995 Landsat image. To do this we will carry out a pixel based classification of the image. We do this by normalising the Landsat Bands which are datasets with Digital Values of 0-255 (as they are an 8-bit image) to 0-1 (0 = not Glacier ice and snow, 1 = Glacier ice and snow). We then identify all pixels in the image that meet the reflectance threshold value to isolate glacier snow/ice (0.3 in all bands).\n",
+    "Now that folder is more organised, we will calculate the total glacier area for the 1995 Landsat image. To do this we will carry out a pixel based classification of the image. We do this by normalising the Landsat Bands which are datasets with DN Values of 0-255 (as they are an 8-bit image) to 0-1 (0 = not Glacier ice and snow, 1 = Glacier ice and snow). We then identify all pixels in the image that meet the reflectance threshold value to isolate glacier snow/ice (0.3 in all bands).\n",
     "\n",
-    "After Glacier ice and snow has been identified we will save the glacier mask to a new file, updating the profile metadata from the False Colour Composite Trim to reflect that the new image only has 1 band."
+    "After glacier ice and snow has been identified we will save the glacier mask to a new file, updating the profile metadata from the false colour composite trim to reflect that the new image only has 1 band."
    ]
   },
   {
@@ -1544,7 +1544,7 @@
    "source": [
     "Now that folder is more organised, calculate the total glacier area for the 2014 Landsat image. To do this the user will carry out a pixel based classification of the image. This is done by using the normalised Landsat Bands and then identifying all pixels in the image that meet the reflectance threshold value to isolate glacier snow/ice (0.3 in all bands).\n",
     "\n",
-    "After Glacier ice and snow has been identified, save the glacier mask to a new file and then updating the profile metadata from the False Colour Composite Trim to reflect that the new image only has 1 band."
+    "After glacier ice and snow has been identified, save the glacier mask to a new file and then updating the profile metadata from the false colour composite trim to reflect that the new image only has 1 band."
    ]
   },
   {
@@ -1890,7 +1890,7 @@
    "source": [
     "Now that folder is more organised, calculate the total glacier area for the 2024 Landsat image. To do this the user will carry out a pixel based classification of the image. This can be done by using the normalised Landsat Bands and then identifying all pixels in the image that meet the reflectance threshold value to isolate glacier snow/ice (0.3 in all bands).\n",
     "\n",
-    "After Glacier ice and snow has been identified the user will save the glacier mask to a new file, updating the profile metadata from the False Colour Composite Trim to reflect that the new image only has 1 band."
+    "After glacier ice and snow has been identified the user will save the glacier mask to a new file, updating the profile metadata from the false colour composite trim to reflect that the new image only has 1 band."
    ]
   },
   {
@@ -2035,8 +2035,8 @@
    "source": [
     "## Explanation of the Results ##\n",
     "\n",
-    "As seen in the Summary table it appears that the Glacier Area of the Kenai Mountains increased between 1986 - 2009 and then decreased between 2009 - 2024. Overall the Glacier area of the Kenai Mountains increased between 1986 - 2024. \n",
-    "These results are irregular and are likely caused by the pixel-based classification which has detectedfeatures in the false colour composite images and has incorrectly identified them as snow (cloud coverage). The below section includes future adaptations of the code that can be used to improve the reliability and accuracy of the results from this study, as well as adaptations that can be applied to this code for future studies."
+    "As seen in the Summary table it appears that the glacier Area of the Kenai Mountains increased between 1986 - 2009 and then decreased between 2009 - 2024. Overall the glacier area of the Kenai Mountains increased between 1986 - 2024. \n",
+    "These results are irregular and are likely caused by the pixel-based classification which has detected features in the false colour composite images and has incorrectly identified them as snow (cloud coverage). The below section includes future adaptations of the code that can be used to improve the reliability and accuracy of the results from this study, as well as adaptations that can be applied to this code for future studies."
    ]
   },
   {
@@ -2048,12 +2048,20 @@
     "\n",
     "Future versions of this code can includes the following to make the analysis more accurate:-\n",
     "- Increasing the gamma of the trimmed false colour composite images to improve the visibility of cloud covers in each scene. Additionally, incerasing the gamma makes the scene appear brighter and easier to interpret in a visual analysis.\n",
-    "- Applying a NDSI (Normalised Difference Snow Index) as opposed to the normalisation used in this study. This will increase the relability of the Glacier mask results as the normalisation method selects all features that has the set reflectance value. This may include clouds in the image or other objects that aren't snow or ice. This may explain why the results of the study appear to be more irregular as it would be expected for glacier area to decrease overtime.\n",
+    "- Applying a NDSI (Normalised Difference Snow Index) as opposed to the normalisation used in this study. This will increase the relability of the glacier mask results as the normalisation method selects all features that has the set reflectance value. This may include clouds in the image or other objects that aren't snow or ice. This may explain why the results of the study appear to be more irregular as it would be expected for glacier area to decrease overtime.\n",
     "- Selecting cloud free imagery to provide better visibility of glacier snow and ice.\n",
     "- Creating a more accurate Bounding Box, future versions could include creating a consistent bounding box for all images as some scenes will include other feature detected as glacier ice and snow is not apart of the Kenai Mountains study area.\n",
-    "- Generating a shapefile using the imported `shapely` to generate a shapefile which can display the identified glacier area on GIS and Remote Sensing software such as ArcGIS, QGIS, ArcMap, etc.\n",
+    "- Generating a shapefile using the imported `shapely` module to generate a shapefile which can display the identified glacier area on GIS and Remote Sensing software such as ArcGIS, QGIS, ArcMap, etc.\n",
     "- Future versions of the script could make the process of analysing each landsat image easier by bulk downloading and processing images rather than processing each image separately."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69d4456b-a882-4665-94fa-7658273c3806",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
